--- a/MisterToken/MisterToken/MisterToken.csproj
+++ b/MisterToken/MisterToken/MisterToken.csproj
@@ -74,13 +74,12 @@
   <ItemGroup>
     <Compile Include="model\ThreePieceElbowToken.cs" />
     <Compile Include="model\MultiPlayer.cs" />
-    <Compile Include="model\MultiPlayerListener.cs" />
     <Compile Include="graphics\Sprites.cs" />
     <Compile Include="model\Board.cs" />
     <Compile Include="model\Cell.cs" />
     <Compile Include="Constants.cs" />
     <Compile Include="model\SinglePlayer.cs" />
-    <Compile Include="model\SinglePlayerListener.cs" />
+    <Compile Include="model\GameListener.cs" />
     <Compile Include="input\AnalogInput.cs" />
     <Compile Include="input\BooleanInput.cs" />
     <Compile Include="input\BooleanInputOnce.cs" />
