--- a/MisterToken/MisterToken/MisterToken.csproj
+++ b/MisterToken/MisterToken/MisterToken.csproj
@@ -73,7 +73,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="graphics\SpriteHook.cs" />
-    <Compile Include="Level.cs" />
+    <Compile Include="model\Level.cs" />
+    <Compile Include="model\FourPieceToken.cs" />
     <Compile Include="model\Game.cs" />
     <Compile Include="model\ThreePieceElbowToken.cs" />
     <Compile Include="model\MultiPlayer.cs" />
