--- a/MisterToken/MisterToken/MisterToken.csproj
+++ b/MisterToken/MisterToken/MisterToken.csproj
@@ -77,6 +77,7 @@
     <Compile Include="graphics\Drawable.cs" />
     <Compile Include="graphics\Image.cs" />
     <Compile Include="graphics\SpriteHook.cs" />
+    <Compile Include="input\AnalogInputRepeater.cs" />
     <Compile Include="model\BombToken.cs" />
     <Compile Include="model\ColorDistribution.cs" />
     <Compile Include="model\SkullToken.cs" />
