Add a gauge to multiple for who's won more games.

--- a/MisterToken/MisterToken/MisterToken.csproj
+++ b/MisterToken/MisterToken/MisterToken.csproj
@@ -94,6 +94,7 @@
     <Compile Include="model\LevelManager.cs" />
     <Compile Include="Menu.cs" />
     <Compile Include="model\PatternParser.cs" />
+    <Compile Include="model\StatsTracker.cs" />
     <Compile Include="model\ThreePieceElbowToken.cs" />
     <Compile Include="model\MultiPlayer.cs" />
     <Compile Include="graphics\Sprites.cs" />
