Reorganize the folders a little.

--- a/MisterToken/MisterToken/MisterToken.csproj
+++ b/MisterToken/MisterToken/MisterToken.csproj
@@ -96,29 +96,29 @@
     <Compile Include="menu\LevelMenuItem.cs" />
     <Compile Include="menu\DefaultMenuItem.cs" />
     <Compile Include="menu\MenuItem.cs" />
-    <Compile Include="model\BombToken.cs" />
-    <Compile Include="model\ColorDistribution.cs" />
-    <Compile Include="model\SkullToken.cs" />
-    <Compile Include="model\FourPieceIToken.cs" />
-    <Compile Include="model\FourPieceJToken.cs" />
-    <Compile Include="model\FourPieceLToken.cs" />
-    <Compile Include="model\FourPieceZToken.cs" />
-    <Compile Include="model\FourPieceSToken.cs" />
-    <Compile Include="model\FourPieceTToken.cs" />
-    <Compile Include="model\Level.cs" />
-    <Compile Include="model\FourPieceSquareToken.cs" />
-    <Compile Include="model\Game.cs" />
-    <Compile Include="model\LevelManager.cs" />
+    <Compile Include="token\BombToken.cs" />
+    <Compile Include="board\ColorDistribution.cs" />
+    <Compile Include="token\SkullToken.cs" />
+    <Compile Include="token\FourPieceIToken.cs" />
+    <Compile Include="token\FourPieceJToken.cs" />
+    <Compile Include="token\FourPieceLToken.cs" />
+    <Compile Include="token\FourPieceZToken.cs" />
+    <Compile Include="token\FourPieceSToken.cs" />
+    <Compile Include="token\FourPieceTToken.cs" />
+    <Compile Include="logic\Level.cs" />
+    <Compile Include="token\FourPieceSquareToken.cs" />
+    <Compile Include="logic\Game.cs" />
+    <Compile Include="logic\LevelManager.cs" />
     <Compile Include="menu\Menu.cs" />
-    <Compile Include="model\PatternParser.cs" />
-    <Compile Include="model\StatsTracker.cs" />
-    <Compile Include="model\ThreePieceElbowToken.cs" />
-    <Compile Include="model\MultiPlayer.cs" />
-    <Compile Include="model\Board.cs" />
-    <Compile Include="model\Cell.cs" />
+    <Compile Include="board\PatternParser.cs" />
+    <Compile Include="logic\StatsTracker.cs" />
+    <Compile Include="token\ThreePieceElbowToken.cs" />
+    <Compile Include="logic\MultiPlayer.cs" />
+    <Compile Include="board\Board.cs" />
+    <Compile Include="board\Cell.cs" />
     <Compile Include="Constants.cs" />
-    <Compile Include="model\SinglePlayer.cs" />
-    <Compile Include="model\GameListener.cs" />
+    <Compile Include="logic\SinglePlayer.cs" />
+    <Compile Include="logic\GameListener.cs" />
     <Compile Include="input\AnalogInput.cs" />
     <Compile Include="input\BooleanInput.cs" />
     <Compile Include="input\BooleanInputOnce.cs" />
@@ -127,14 +127,14 @@
     <Compile Include="input\InputManager.cs" />
     <Compile Include="input\BooleanInputRepeater.cs" />
     <Compile Include="graphics\SpriteManager.cs" />
-    <Compile Include="model\Token.cs" />
-    <Compile Include="model\TokenDistribution.cs" />
-    <Compile Include="model\TokenPiece.cs" />
+    <Compile Include="token\Token.cs" />
+    <Compile Include="token\TokenDistribution.cs" />
+    <Compile Include="token\TokenPiece.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="MisterTokenGame.cs" />
-    <Compile Include="model\TokenGenerator.cs" />
-    <Compile Include="model\TwoPieceToken.cs" />
+    <Compile Include="token\TokenGenerator.cs" />
+    <Compile Include="token\TwoPieceToken.cs" />
     <Compile Include="sound\SoundHook.cs" />
     <Compile Include="sound\SoundManager.cs" />
     <Compile Include="storage\SaveData.cs" />
