--- a/MisterToken/MisterToken/MisterToken.csproj
+++ b/MisterToken/MisterToken/MisterToken.csproj
@@ -93,6 +93,7 @@
     <Compile Include="graphics\Image.cs" />
     <Compile Include="graphics\SpriteHook.cs" />
     <Compile Include="input\AnalogInputRepeater.cs" />
+    <Compile Include="menu\Menu2.cs" />
     <Compile Include="menu\LevelMenuItem.cs" />
     <Compile Include="menu\DefaultMenuItem.cs" />
     <Compile Include="menu\MenuItem.cs" />
